# clrea

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASING.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
clrea/: Cargo.toml
clrea/assets/: rules.toml
clrea/shell/: clrea.bash  clrea.zsh
clrea/src/: history.rs  main.rs  rules.rs  suggest.rs
