[package]
name = "clrea"
version = "0.1.0"
edition = "2024"
authors = ["Fares Aouani Cherif"]
description = "Shell helper that catches mistyped clear/ls/cd and asks 'did you mean ...?' before running"
repository = "https://github.com/faresaouani/clrea"
homepage = "https://github.com/faresaouani/clrea"
license = "MIT OR Apache-2.0"
readme = "../README.md"
keywords = ["cli", "shell", "typo", "zsh", "bash"]
categories = ["command-line-utilities"]
include = [
    "src/**/*.rs",
    "assets/rules.toml",
    "shell/clrea.zsh",
    "shell/clrea.bash",
    "Cargo.toml",
]

[[bin]]
name = "clreactl"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
strsim = "0.11"
dirs = "5"

[dev-dependencies]
tempfile = "3"
